# mini-compilateur

./: CMakeLists.txt  ReadWrite.cs  facile.lex  facile.y  main_test.c
test/: simple.fac
tests/: boucle_complexe.facile  boucle_simple.fac  boucles_imbriques.fac  division_entiere.facile  if_complexe.fac  if_imbriques.facile  if_simple.fac  pgcd.facile
